fixed an issuer whereh1 in jumbowas too large on small/mobile screens

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,3 +140,9 @@ body{
     background-color:#93311c;
     border-color:#93311c;
 }
+
+@media screen and (max-width: 768px) {
+    .container-fluid .jumbotron h1{
+        font-size: 250%
+        }
+}
